--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.12"
+    "react-icons": "^4.2.0",
+    "sass": "^1.32.12",
+    "stripe": "^8.145.0"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
