--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "test": "jest --watchAll",
+    "start": "next start"    
   },
   "dependencies": {
     "@prismicio/client": "^5.0.0",
@@ -22,9 +23,15 @@
     "stripe": "^8.145.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/node": "^15.0.1",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.4",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.2.4"
   }
 }
