--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "test": "jest --watchAll",
-    "start": "next start"    
+    "start": "next start"
   },
   "dependencies": {
     "@prismicio/client": "^5.0.0",
@@ -30,8 +30,10 @@
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.4",
     "babel-jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.2.4"
   }
 }
